# sparkfun_robot_fingetips

./: CMakeLists.txt  LICENSE.md  README.md  SPX_fingertips_arduino.ino  package.xml  setup.py  sparkfun_robot_fingertips.py
SPX_fingertips_arduino/: SPX_fingertips_arduino.ino
launch/: sparkfun_robot_fingertips.launch  sparkfun_robot_fingertips_v2.launch  visualise_spx.launch
scripts/: SPXanalysis2.py  SPXpublisher.py  SPXvisualise.py  SPXvisualize.py  sparkfun_robot_fingertips.py  spx_publisher.py  visualiseSPX.py  visualise_SPX_sensor.py  visualizer.py
test1/: SPXvisualize.py  SPXvisualize1.py
