<package format="2">
  <name>sparkfun_robot_fingertips</name>
  <version>1.2.4</version>
  <description>
   Publisher 
  </description>
  <maintainer email="pedro.baptistamachado@ntu.ac.uk">Pedro Machado</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
